@@ -25,7 +25,6 @@
 typedef int (*interp_init_ftype) (void *data);
 typedef int (*interp_resume_ftype) (void *data);
 typedef int (*interp_suspend_ftype) (void *data);
-typedef int (*interp_delete_ftype) (void *data);
 typedef int (*interp_prompt_ftype) (void *data, char *new_prompt);
 typedef int (*interp_exec_ftype) (void *data, char *command);
 
@@ -37,7 +36,6 @@ struct gdb_interpreter_procs
   interp_init_ftype init_proc;
   interp_resume_ftype resume_proc;
   interp_suspend_ftype suspend_proc;
-  interp_delete_ftype delete_proc;
   interp_exec_ftype exec_proc;
   interp_prompt_ftype prompt_proc;
 };
@@ -47,7 +45,6 @@ extern struct gdb_interpreter
 			struct gdb_interpreter_procs *procs);
 
 extern int gdb_add_interpreter (struct gdb_interpreter *interp);
-extern int gdb_delete_interpreter (struct gdb_interpreter *interp);
 extern int gdb_set_interpreter (struct gdb_interpreter *interp);
 extern struct gdb_interpreter *gdb_lookup_interpreter (char *name);
 extern struct gdb_interpreter *gdb_current_interpreter ();
