@@ -47,7 +47,6 @@ struct gdb_interpreter *mi_interp;
 static int mi_interpreter_init (void *data);
 static int mi_interpreter_resume (void *data);
 static int mi_interpreter_suspend (void *data);
-static int mi_interpreter_delete (void *data);
 static int mi_interpreter_exec (void *data, char *command);
 static int mi_interpreter_prompt (void *data, char *new_prompt);
 
@@ -164,12 +163,6 @@ static int
 mi_interpreter_suspend (void *data)
 {
   gdb_disable_readline ();
-  return 1;
-}
-
-static int
-mi_interpreter_delete (void *data)
-{
   return 1;
 }
 
@@ -424,7 +417,6 @@ _initialize_mi_interp (void)
       mi_interpreter_init,	/* init_proc */
       mi_interpreter_resume,	/* resume_proc */
       mi_interpreter_suspend,	/* suspend_proc */
-      mi_interpreter_delete,	/* delete_proc */
       mi_interpreter_exec,	/* exec_proc */
       mi_interpreter_prompt	/* prompt_proc */
     };
