@@ -1,5 +1,10 @@
 2002-11-04  Elena Zannoni  <ezannoni@redhat.com>
 
+	* mi-interp.c mi_interpreter_delete): Remove.
+	(_initialize_mi_interp): Remove mi_interpreter_delete.
+
+2002-11-04  Elena Zannoni  <ezannoni@redhat.com>
+
 	* mi-interp.c (mi_interpreter_do_one_event): Remove.
 
 2002-11-04  Elena Zannoni  <ezannoni@redhat.com>
